public/css/page1.css
body, html {
    height: 100%;
    
}
.bg {
    background-image: url("../img/pic1.png");
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: initial;
    overflow: scroll;
}
.paragraph{
    font-weight: 400;
    font-size: larger;
}
.hehe{
    height: 40px;
    width: 150px;
	padding: 0 30px;
	border-radius: 50px;
	cursor: pointer;
	box-shadow: 0px 15px 20px rgba(54, 24, 79, 0.5);
	color: white;
	background-color: #1e2d70;
	text-transform: uppercase;
	font-weight: 600;
    font-size: 15px;
    border-color: #1e2d70;
    outline: none!important;
}
.hehe:hover{
    background-color: #3699d5;
    border-color: #3699d5;
}
.fa{
    font-size: 100px;
}
@media(max-width:576px){
    .title{
        font-size: 1.5rem;
    }
}

